page.css: fixed alignment problem

--- a/resources/page.css
+++ b/resources/page.css
@@ -3,6 +3,7 @@ pre
 {
   background-color: #f5f5ff;
   border: solid #e5e5ee 1px;
+  text-align: left;
 }
 
 body
@@ -22,7 +23,7 @@ h1, h2, h3, h4, h5, h6
 article
 {
   margin: 0;
-  width: 35em;
+  width: 38em;
   text-align: justify;
 }
 
@@ -59,7 +60,7 @@ div#outline
 {
   position: fixed;
   top: 2em;
-  left: 37.5em;
+  left: 41em;
 }
 
 div#outline > ol
